force-app/src/objects/TR1__Additional_Locations__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Additional_Contact_GeoLocation__c</fullName>
        <label>Additional Contact GeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>TR1__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Additional Locations</relationshipLabel>
        <relationshipName>Additional_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__CountryNew__c</fullName>
        <inlineHelpText>Picklist with the list of Countries available in SalesForce</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TR1__CountriesStandard</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country (Deprecated)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Department__c</fullName>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Additional Locations</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Additional Locations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>